--- a/src/views/devices-view.html
+++ b/src/views/devices-view.html
@@ -28,12 +28,15 @@
     position: fixed;
     bottom: 94px;
     right: 24px;
+    background: white;
   }
 
   </style>
 
   <reef-icon-button icon="add" class="fixed" no-shadow="false"></reef-icon-button>
-
+  <reef-grid>
+    <h1>Under construction</h1>
+  </reef-grid>
 
 </template>
 
